[gd_scene load_steps=11 format=3 uid="uid://da3fnqeol8pr3"]

[ext_resource type="Script" uid="uid://cv4xgky5sgdrf" path="res://ui/shops/common/shop.gd" id="1_eb1bs"]
[ext_resource type="Texture2D" uid="uid://4tgxvu4fo1h1" path="res://ui/common/sprite/text_box.png" id="1_haqqc"]
[ext_resource type="FontFile" uid="uid://duujn5vjqjbyi" path="res://ui/common/font/arialbd.ttf" id="2_1swlb"]
[ext_resource type="Script" uid="uid://c58mgmklnekfj" path="res://entities/common/entity/entity_properties.gd" id="2_i4tin"]
[ext_resource type="Script" uid="uid://7kc40c7xb0i6" path="res://items/common/item.gd" id="2_x620k"]
[ext_resource type="PackedScene" uid="uid://d2bhbuwxh85sr" path="res://ui/camp_menu/inventory/common/inventory_gui.tscn" id="3_1swlb"]
[ext_resource type="Script" uid="uid://bgb0k3xdll7wc" path="res://ui/camp_menu/inventory/common/inventory.gd" id="3_x620k"]
[ext_resource type="Theme" uid="uid://pqyn725r5mhs" path="res://ui/common/theme/empty_button.tres" id="6_q6641"]
[ext_resource type="PackedScene" uid="uid://cj65loh8on112" path="res://ui/camp_menu/inventory/common/shop_item_gui.tscn" id="7_i4tin"]

[sub_resource type="Resource" id="Resource_i4tin"]
script = ExtResource("3_x620k")
party = Array[ExtResource("2_i4tin")]([])
inventory = Dictionary[int, ExtResource("2_x620k")]({})
metadata/_custom_type_script = "uid://bgb0k3xdll7wc"

[node name="Shop" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eb1bs")
shop_name = "Shop"
enable_sell_mode = true
target_inventory = SubResource("Resource_i4tin")

[node name="Panel" type="ColorRect" parent="."]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitlePanel" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.402344
anchor_top = 0.0729167
anchor_right = 0.597656
anchor_bottom = 0.128906
offset_left = -4.0
offset_right = 4.0
offset_bottom = 7.0
grow_horizontal = 2
texture = ExtResource("1_haqqc")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 3
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="TitlePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.5
offset_top = -17.5
offset_right = 37.5
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_1swlb")
theme_override_font_sizes/font_size = 30
text = "Item"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="GilLabel" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.488281
anchor_top = 0.833333
anchor_right = 0.683594
anchor_bottom = 0.889323
offset_left = -4.0
offset_right = 4.0
offset_bottom = 7.0
grow_horizontal = 2
texture = ExtResource("1_haqqc")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 3
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="GilLabel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.370192
anchor_top = 0.51
anchor_right = 0.855769
anchor_bottom = 0.51
offset_left = -75.0
offset_top = -17.5
offset_bottom = 17.5
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_1swlb")
theme_override_font_sizes/font_size = 30
text = "100 G"
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="InfoPanel" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0507812
anchor_top = 0.3125
anchor_right = 0.230469
anchor_bottom = 0.606771
offset_left = -4.0
offset_right = 4.0
offset_bottom = 7.0
grow_horizontal = 2
texture = ExtResource("1_haqqc")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 3
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="InfoPanel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.0963855
anchor_right = 1.0
anchor_bottom = 0.935743
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_1swlb")
theme_override_font_sizes/font_size = 30
text = "Welcome"
horizontal_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="InventoryPanel" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.792969
anchor_top = 0.0729167
anchor_right = 0.957031
anchor_bottom = 0.865885
offset_left = -4.0
offset_right = 4.0
offset_bottom = 7.0
grow_horizontal = 2
texture = ExtResource("1_haqqc")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 3
metadata/_edit_use_anchors_ = true

[node name="InventoryGui" parent="InventoryPanel" instance=ExtResource("3_1swlb")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0454547
anchor_top = 0.0389611
anchor_right = 0.954548
anchor_bottom = 0.961039
rows = 9
hide_scrollbar = true
disable_scrolling = true
inv_grid_v_seperation = 60
item_gui = ExtResource("7_i4tin")
enable_item_use_action = false
metadata/_edit_use_anchors_ = true

[node name="OptionsPanel" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.238281
anchor_top = 0.697917
anchor_right = 0.425781
anchor_bottom = 0.949219
offset_left = -4.0
offset_right = 4.0
offset_bottom = 7.0
grow_horizontal = 2
texture = ExtResource("1_haqqc")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 3
metadata/_edit_use_anchors_ = true

[node name="OptionsList" type="VBoxContainer" parent="OptionsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.863636
anchor_bottom = 0.875
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="BuyButton" type="Button" parent="OptionsPanel/OptionsList"]
layout_mode = 2
theme = ExtResource("6_q6641")
theme_override_fonts/font = ExtResource("2_1swlb")
theme_override_font_sizes/font_size = 30
text = "Buy"

[node name="SellButton" type="Button" parent="OptionsPanel/OptionsList"]
layout_mode = 2
theme = ExtResource("6_q6641")
theme_override_fonts/font = ExtResource("2_1swlb")
theme_override_font_sizes/font_size = 30
text = "Sell"

[node name="ExitButton" type="Button" parent="OptionsPanel/OptionsList"]
layout_mode = 2
theme = ExtResource("6_q6641")
theme_override_fonts/font = ExtResource("2_1swlb")
theme_override_font_sizes/font_size = 30
text = "Exit"

[connection signal="pressed" from="OptionsPanel/OptionsList/BuyButton" to="." method="_on_buy_button_pressed"]
[connection signal="pressed" from="OptionsPanel/OptionsList/SellButton" to="." method="_on_sell_button_pressed"]
[connection signal="pressed" from="OptionsPanel/OptionsList/ExitButton" to="." method="_on_exit_button_pressed"]
